# H2S-scrapper

./: .gitignore  .justfile  .pre-commit-config.yaml  README.md  houses.db  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: pylint.yml
src/h2s_scrapper/: config.json  config_example.json  db.py  env_example  main.py  run.sh  scrape.py  telegram.py  utils.py
src/h2snotifier/: db.py  main.py  scrape.py  telegram.py
tests/: test_cloudscraper.py  test_message.py  test_notebook.ipynb
