[tool.poetry]
name = "h2s scrapper"
version = "0.1.0"
description = "H2S Web Scrapper for the community by the community"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^3.8.0"
asgiref = "^3.8.1"
black = "^24.8.0"
certifi = "^2024.7.4"
click = "^8.1.7"
charset-normalizer = "^3.3.2"
idna = "^3.8"
image = "^1.5.33"
mypy = "^1.11.2"
packaging = "^24.1"
pathspec = "^0.12.1"
pillow = "^10.4.0"
platformdirs = "^4.2.2"
requests = "^2.32.3"
sqlparse = "^0.5.1"
tomli = "^2.0.1"
typing-extensions = "^4.12.2"
urllib3 = "^2.2.2"

[tool.poetry.group.dev.dependencies]
mypy-extensions = "^1.0.0"
pylint = "^3.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
